--- a/Resume/css/style.css
+++ b/Resume/css/style.css
@@ -18,6 +18,7 @@ body {
 }
 
 .wrapper {
+    position: relative;
     margin-top: 5px;
     width: 100;
     height: 600px;
@@ -41,7 +42,7 @@ body {
     margin-left: 15px;
     float: left;
     
-     width: 380px;
+     width: 340px;
     height: 500px;
     color:azure;
 }
@@ -66,19 +67,19 @@ body {
 }
 .wrapper2 {
     
-    height: 600px;
+    
+    height: 100%;
     margin-left: 80px;
     margin-right: 80px;
-    background-image: url(images/desktopwallpapers.org.ua_9834.jpg);
+    background-image: url(../images/desktopwallpapers.org.ua_9834.jpg);
 }
 .project {
     margin-right: 40px;
     text-align: center;
     align-content: center;
     margin-top: 40px;
-    margin-left: 15px;
     float: right;
-    width: 320px;
+    width: 20%;
     height: 500px;
     color: azure;
     
@@ -104,7 +105,7 @@ body {
     float: left;
     margin-top: 60px;
     width: 170px;
-    margin-left: 30px;
+    margin-left: 0px;
     
     
 }
@@ -118,7 +119,7 @@ body {
 }
 #mh {
      
-    margin-top: 155px;
+    margin-top: 123px;
 }
 #Tchange {
     animation-duration: 10s;
@@ -148,10 +149,10 @@ body {
   -moz-transition: all 0.5s ease;;
   -o-transition: all 0.5s ease;;
   transition: all 0.5s ease;
-    float: right;
+     margin-right: 8px;
     margin-top: 20px;
-    width: 150px;
-    height: 150px
+    width: 100px;
+    height: 100px;
     
 }
 #p1:hover {
@@ -177,10 +178,10 @@ body {
   -moz-transition: all 0.5s ease;;
   -o-transition: all 0.5s ease;;
   transition: all 0.5s ease;
-    float: left;
+    margin-left: 8px;
     margin-top: 20px;
-    width: 150px;
-    height: 150px
+    width: 100px;
+    height: 100px
     
 }
 #p2:hover {
@@ -207,8 +208,8 @@ body {
   transition: all 0.5s ease;
     margin-right: 8px;
     margin-top: 20px;
-    width: 150px;
-    height: 150px
+    width: 100px;
+    height: 100px
     
 }
 #p3:hover {
@@ -230,8 +231,8 @@ body {
   transition: all 0.5s ease;
     margin-left: 8px;
     margin-top: 20px;
-    width: 150px;
-    height: 150px
+    width: 100px;
+    height: 100px
     
 }
 #p4:hover {
@@ -246,6 +247,7 @@ body {
   transform: scale(0.7);
 }
 #p5 {
+    
     -webkit-filter: grayscale(100%);
   -moz-filter: grayscale(100%);
   -ms-filter: grayscale(100%);
@@ -258,8 +260,8 @@ body {
   transition: all 0.5s ease;
     margin-right: 8px;
     margin-top: 20px;
-    width: 150px;
-    height: 150px
+    width: 100px;
+    height: 100px
     
 }
 #p5:hover {
@@ -275,6 +277,7 @@ body {
     
 }
 #p6 {
+    
     -webkit-filter: grayscale(100%);
   -moz-filter: grayscale(100%);
   -ms-filter: grayscale(100%);
@@ -287,8 +290,8 @@ body {
   transition: all 0.5s ease;
     margin-left: 8px;
     margin-top: 20px;
-    width: 150px;
-    height: 150px
+    width: 100px;
+    height: 100px
     
 }
 #p6:hover {
