--- a/Resume/css/media.css
+++ b/Resume/css/media.css
@@ -68,7 +68,54 @@
     
 }
 @media only screen and (max-width : 991px) {
+    body {
+        background-color: black;
+}
+    .project {
+        position: relative;
+        z-index: 1;
+       float: inherit;
+        margin: auto;
+        top: 600px;
+        width: 800px;
+        height: 200px;
+    }
+    .scrolling {
+        top: 630px;}
+    .photo {
+   
+    margin-left: 110px;
     
+}
+    #p1, #p2, #p3, #p4 {
+        margin: 45px;
+    }
+    .scrolling {
+    position: relative;
+     margin-top: 10px;
+     background-color: black;
+     margin: 0 auto;
+     width: 100%;
+     height: 300px;
+     overflow-x: scroll;
+     overflow-y: hidden;
+     white-space: nowrap; 
+     word-wrap: normal; 
+}
+
+.scrolling img {
+     width: 210px;
+     height: 50%;
+}
+    #Myphoto {
+        margin-left: 35px;
+        width: 242px;
+        height: 212px;
+        
+    }
+    #mh {
+    margin-top: 66px;
+}
 }
 @media only screen and (max-width : 767px) {
     
