--- a/Resume/css/media.css
+++ b/Resume/css/media.css
@@ -91,16 +91,10 @@
         margin: 45px;
     }
     .scrolling {
-    position: relative;
-     margin-top: 10px;
-     background-color: black;
-     margin: 0 auto;
+   
      width: 100%;
      height: 300px;
-     overflow-x: scroll;
-     overflow-y: hidden;
-     white-space: nowrap; 
-     word-wrap: normal; 
+    
 }
 
 .scrolling img {
@@ -117,12 +111,59 @@
     margin-top: 66px;
 }
 }
-@media only screen and (max-width : 767px) {
+@media only screen and (max-device-width: 480px) {
+    .hobby2 {
+         margin-top: 70px;
+        float: right;
+        margin-right:0px;
+    }
+    .hobby1 {
+        margin-top: 70px;
+        float: right;
+        margin-right:80px;
+    }
+    #mh {
+        margin-top: 45px;
+        margin-left: 220px;
+    }
+    .photo #Tchange {
+        margin-top: 35px;
+        font-size: 20px;
+    }
+    .skills1 {
+        margin-top: 0px;
+    }
+     .skills2 {
+        margin-top: 0px;
+         margin-left: 30px;
+    }
+    .hobby #inf {
+        font-size: 25px;
+    }
+    .hobby {
+    width: 520px;
+    }
     
+    .photo {
+        margin-top:50px;
+    margin-left: 70px;
 }
-@media only screen and (max-width : 480px) {
-    
+    .wrapper2 {
+    margin-left: 0px;
+    margin-right: 0px;
 }
-@media only screen and (max-width : 320px) {
-    
+.h p {
+        font-size: 27px;
+    }
+.h {
+    padding-top: 55px;
+    text-align: center;
+    margin-left: 0px;
+}
+    .inf {
+    float: right;
+    margin-right: 145px;
+}
+.h #Tchange {
+    font-size: 50px;
 }
