--- a/Resume/css/media.css
+++ b/Resume/css/media.css
@@ -49,7 +49,7 @@
         width: 160px;
     }
     #mh {
-    margin-top: 125px;
+    margin-top: 135px;
 }
     .wrapper2 {
    
@@ -77,7 +77,7 @@
        float: inherit;
         margin: auto;
         top: 600px;
-        width: 800px;
+        width: 900px;
         height: 200px;
     }
     .scrolling {
@@ -118,18 +118,19 @@
         height: 240px;
     }
     .hobby2 {
-         margin-top: 30px;
+         margin-top: 75px;
         float: right;
         margin-right:0px;
     }
     .hobby1 {
-        margin-top: 30px;
+        margin-top: 75px;
         float: right;
-        margin-right:80px;
+        margin-right:10px;
     }
     #mh {
-        margin-top: 10px;
-        margin-left: 220px;
+        margin-left: 160px;
+        margin-top: 34px;
+        
     }
     .photo #Tchange {
         margin-top: 35px;
@@ -174,11 +175,17 @@
     .h #Tchange {
     font-size: 50px;
 }
+     #Tchange1 {
+    margin-top: 100px;
+}
     .inf   #icon {
         margin: 25px;
         float: inherit;
         width: 65px;
         height: 65px;
         
+    }
+    .project { 
+        margin-top: 60px;
     }
 }
