--- a/Resume/css/style.css
+++ b/Resume/css/style.css
@@ -82,7 +82,7 @@ body {
     align-content: center;
     margin-top: 40px;
     float: right;
-    width: 20%;
+    width: 300px;
     height: 550px;
     color: azure;
     
@@ -121,8 +121,8 @@ body {
     
 }
 #mh {
-     
-    margin-top: 123px;
+    text-align: center;
+    margin-top: 135px;
 }
 #Tchange {
     animation-duration: 10s;
@@ -154,8 +154,8 @@ body {
   transition: all 0.5s ease;
      margin-right: 8px;
     margin-top: 20px;
-    width: 100px;
-    height: 100px;
+    width: 130px;
+    height: 130px;
     
 }
 #p1:hover {
@@ -183,8 +183,8 @@ body {
   transition: all 0.5s ease;
     margin-left: 8px;
     margin-top: 20px;
-    width: 100px;
-    height: 100px
+    width: 130px;
+    height: 130px
     
 }
 #p2:hover {
@@ -211,8 +211,8 @@ body {
   transition: all 0.5s ease;
     margin-right: 8px;
     margin-top: 20px;
-    width: 100px;
-    height: 100px
+    width: 130px;
+    height: 130px
     
 }
 #p3:hover {
@@ -234,8 +234,8 @@ body {
   transition: all 0.5s ease;
     margin-left: 8px;
     margin-top: 20px;
-    width: 100px;
-    height: 100px
+    width: 130px;
+    height: 130px
     
 }
 #p4:hover {
@@ -263,8 +263,8 @@ body {
   transition: all 0.5s ease;
     margin-right: 8px;
     margin-top: 20px;
-    width: 100px;
-    height: 100px
+    width: 130px;
+    height: 130px
     
 }
 #p5:hover {
@@ -293,8 +293,8 @@ body {
   transition: all 0.5s ease;
     margin-left: 8px;
     margin-top: 20px;
-    width: 100px;
-    height: 100px
+    width: 130px;
+    height: 130px
     
 }
 #p6:hover {
